--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <div class="wrapper">
         <section class="section1">
             <h1>Easy Shopping Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur  adipiscing 
-                elit. Donec lorem justo, sollicitudin vel ultricies sed, 
-                eleifend nec metus. Etiam vitae pellentesque dolor. </p>
+            <p>Lorem ipsum dolor sit amet. </p>
             <button>Get Started</button>
         </section>
        
