--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <section class="section1">
             <h1>Easy Shopping Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet. </p>
+            <p>Lorem ipsum dolor sit amet 22 354 i'm so sorryie. </p>
             <button>Get Started</button>
         </section>
        
