Atualização do tema do index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <section class="section1">
-            <h1>Easy Shopping Via Mobile</h1>
+            <h1>Easy Shopping Via Mobile- Alteração do Tema</h1>
             <p>Lorem ipsum dolor sit amet 22 354 i'm so sorryie. </p>
             <button>Get Started</button>
         </section>
