--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/png" href="./Assets/OIP.png"/>
-    <title>Estamos na Branch develop</title>
+    <title>Easy Shopping</title>
 </head>
 <body>
     <div class="wrapper">
         <section class="section1">
-            <h1>Easy Shopping Via Mobile- Alteração do Tema</h1>
+            <h1>Easy Shopping Via Mobile</h1>
             <p>Lorem ipsum dolor sit amet 22 354 i'm so sorryie. </p>
             <button>Get Started</button>
         </section>
